[package]
name = "pjatk_council_newsletter"
version = "0.1.0"
edition = "2018"
author = "Rafał Opiłowski <rafalopilowski1@outlook.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrishook = "2.0.1"
tokio = "1.14.0"
atom_syndication = { version = "0.11.0", features = ["with-serde"] }
reqwest = "0.11.7"
xml_dom = "0.2.5"